fix: improve header spacing and layout on mobile viewport in admin section

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -131,12 +131,15 @@ h5,
 h6 {
   font-weight: var(--font-weight-bold);
 }
-h1 {
+h1,
+.h1 {
   font-size: 2rem;
   font-weight: var(--font-weight-black);
 }
-h2 {
+h2,
+.h2 {
   font-size: 1.5rem;
+  font-weight: var(--font-weight-bold);
 }
 
 a {
